# uuid-cli

./: Cargo.toml  README.md
.cargo/: config.toml
src/: cli.rs  main.rs
