[package]
name = "uuid-cli"
version = "1.0.1"
authors = ["Kyle Gretchev <kgretcehv@gmail.com>"]
description = "Generate UUIDs"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive"] }
clipboard = "0.5"
uuid = { version = "0.8", features = ["v4"] }

[[bin]]
name = "uuid"
path = "src/main.rs"

[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"
